--- a/css/admin-style.css
+++ b/css/admin-style.css
@@ -12,9 +12,13 @@
 	bottom:5%;
 	right:50%;
 }
+.dropdown-menu{
+	display:block;
+}
 .input-block-level {
 	display: block;
 	width: 100%;
 	min-height: 28px;        // Make inputs at least the height of their button counterpart
 	.box-sizing(border-box); // Makes inputs behave like true block-level elements
   }
+
