--- a/css/contactForm.css
+++ b/css/contactForm.css
@@ -15,7 +15,7 @@ textarea {
   .containerContact {
     position: relative;
     width: 100%;
-    height: 100px;
+    height: auto;
     min-height: 100vh;
     padding: 2rem;
     overflow: hidden;
@@ -307,4 +307,7 @@ textarea.input {
   .btn {
     padding: 0.45rem 1.2rem;
   }
+}
+.fp-enabled .modal{
+   position:fixed !important;
 }
